Add links to project pages.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
     </p>
     <ul>
       <li>
-        <h2><a href="">5starバイリンガル保育士養成センター</a></h2>
+        <h2>
+          <a href="https://globallabo.github.io/trainingcenter-website/"
+            >5starバイリンガル保育士養成センター</a
+          >
+        </h2>
       </li>
       <li>
-        <h2><a href="">5star英会話 Online</a></h2>
+        <h2>
+          <a href="https://globallabo.github.io/eikaiwaonline-website/"
+            >5star英会話 Online</a
+          >
+        </h2>
       </li>
       <li>
-        <h2><a href=""></a>New Stars - Early Childhood English Curriculum</h2>
+        <h2>
+          <a href="https://globallabo.github.io/newstars-website/"
+            >New Stars - Early Childhood English Curriculum</a
+          >
+        </h2>
       </li>
     </ul>
   </body>
