--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <ul>
       <li>
         <h2>
+          <a href="https://globallabo.github.io/elite-website/"
+            >Elite Business English Curriculum</a
+          >
+        </h2>
+      </li>
+      <li>
+        <h2>
           <a href="https://globallabo.github.io/trainingcenter-website/"
             >5starバイリンガル保育士養成センター</a
           >
