Add SCSS as part of the development

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Landing Pages made for グローバル教育 Labo</h1>
     <p>
       These are some landing pages made for various projects at グローバル教育
-      Labo. Designs were given as PDF and the web pages were coded from scratch
-      using HTML and CSS.
+      Labo. Designs were given as PDF and the web pages were developed from
+      scratch using HTML and CSS/SCSS.
     </p>
     <ul>
       <li>
